Fix alert overflow on mobile

--- a/app/assets/stylesheets/darkswarm/page_alert.css.sass
+++ b/app/assets/stylesheets/darkswarm/page_alert.css.sass
@@ -15,6 +15,12 @@
     background-position: center center
     padding: 12px 0 8px 0
     margin: 0
+
+    h6
+      @media all and (max-width: 768px)
+        font-size: 10px
+        line-height: 24px
+
     a.alert-cta
       &, & *
         @include csstrans
